--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.17",
-    "vue-router": "^3.0.1",
+    "axios": "^0.18.0",
+    "vue": "latest",
+    "vue-axios": "^2.1.4",
+    "vue-resource": "^1.5.1",
+    "vue-router": "latest",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -17,7 +20,8 @@
     "@vue/cli-plugin-eslint": "^3.0.5",
     "@vue/cli-service": "^3.0.5",
     "@vue/eslint-config-standard": "^3.0.5",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.5.17",
+    "vue": "latest"
   },
   "eslintConfig": {
     "root": true,
